--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
     "@types/node": "^20.10.4",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
@@ -34,6 +35,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "express": "^4.19.2",
     "logging-starter": "^0.0.6",
     "mqtt": "^5.5.0",
     "web-client-starter": "^0.0.5"
